@@ -38,6 +38,7 @@
 	<property name="width" type="int" />
 	<property name="height" type="int" />
 	<property name="framerate" type="fraction" />
+    <property name="pixel-aspect-ratio" type="fraction" />
       </properties>
     </component>
   </components>
