@@ -1,6 +1,12 @@
 2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.py:
+	* flumotion/component/dvb/dvb.xml:
+	Add pixel-aspect-ratio property.
+
+2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
 	Use bi-linear video scaling.
 
 2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
